adding multiple votes per question

--- a/votes/templates/votes/survey.html
+++ b/votes/templates/votes/survey.html
@@ -23,7 +23,7 @@
              {% else %}
              type="radio"
              {% endif %}
-             style="height:2vw; width:3vw; vertical-align: middle;" value="r{{response.id}}" name="q{{question.id}}"> {{ response.text }}</br>
+              value="r{{response.id}}" name="q{{question.id}}"> {{ response.text }}</br>
                 <!-- <button onclick="myFunction()">Click me</button></li> -->
              {% endfor %}
              </fieldset>
