--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -29,7 +29,7 @@ for a Community Votes account and sign in below:
  -->
 
 
-<p>{% blocktrans %}If you have not created an account yet, then please
+<!-- <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -41,6 +41,6 @@ for a Community Votes account and sign in below:
   <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
   <br>
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-</form>
+</form> -->
 
 {% endblock %}
