ordered the results page

--- a/votes/templates/votes/results.v2.html
+++ b/votes/templates/votes/results.v2.html
@@ -29,7 +29,7 @@ document.addEventListener("DOMContentLoaded", function() {
    {% for question in survey.get_questions %} <!-- get ordered questions -->
    <hr>
      <strong>{{question.text}}</strong><br/>
-     {% for response in question.get_responses %} <!-- get ordered responses -->
+     {% for response in question.get_responses_by_votes %} <!-- get ordered responses -->
          {{response.text}} ({{response.votes}})<br/>
          <div class="progressBar" id="progressBar">
           <div class="progressResult" id="rid_{{response.id}}"></div>
