--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -91,11 +91,12 @@
          </li>
          {% endif %}
 
-
       </ul>
+      {% if user.is_authenticated %}
       <div class="form-inline my-2 my-lg-0 mb-0 h1">
           <font color="white" class="text-capitalize"><span class="myfont-scaling-med">{{ firstname }}</span></font>
       </div>
+      {% endif %}
       <!-- <form class="form-inline my-2 my-lg-0">
          <input class="form-control mr-sm-2" placeholder="Search" aria-label="Search" type="text">
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
