--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 <!-- {% load i18n %} -->
-{% load account socialaccount %}
+<!-- {% load account socialaccount %} -->
 
 {% block head_title %}Sign In{% endblock %}
 
