--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -5,7 +5,8 @@
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <!-- <meta charset="utf-8"> -->
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Created to make student participation in school decisions a reality. With its easy-to-use interface, students vote to make their voices heard.">
+    <meta name="keywords" content="School, Vote, Voting, Students, Survey, ASB" />
     <meta name="author" content="Luca Cotter">
     {% load static %}
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
