--- a/votes/templates/votes/results.v2.html
+++ b/votes/templates/votes/results.v2.html
@@ -18,7 +18,7 @@ document.addEventListener("DOMContentLoaded", function() {
 )
 </script>
 {% endblock %}
-{% block title %}Community Votes{% endblock %}
+{% block title %}School Votes{% endblock %}
 {% block sidenav %}
 {% endblock %}
 {% block content %}
