--- a/votes/templates/votes/community.html
+++ b/votes/templates/votes/community.html
@@ -21,12 +21,16 @@
                      <a class="btn btn-primary" href="{% url 'survey' survey_id=survey.id %}">Take Survey</a>
                   {% endif %}
                   {% if is_staff or not survey.results_are_hidden %}
-                  <a class="btn btn-primary" href="{% url 'results' survey_id=survey.id %}">See Results</a><br/>
+                  <a class="btn btn-primary" href="{% url 'results' survey_id=survey.id %}">See Results</a>
                   {% endif %}
+		  {% if is_staff and survey.results_are_hidden %}
+			<font size="-0.5">(Results for staff only)</font>
+		  {% endif %}
+		  <br/>
                   {% if survey.has_not_closed_yet %}
                    <font size="-0.5">
-                     Survey open from {{ survey.get_open_datetime_str }}
-                     to {{ survey.get_close_datetime_str }}
+                     Opens: {{ survey.get_open_datetime_str }} <br/>
+                     Closes: {{ survey.get_close_datetime_str }}
                      <br/>
                   </font>
                   {% endif %}
