--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -67,9 +67,9 @@
               </div>
             </li>
 
-            <!-- <li class="nav-item inactive">
+            <li class="nav-item inactive">
               <a class="nav-link" href="{% url 'suggestion' %}"><span class="myfont-scaling-med">Suggestion </span></a>
-            </li> -->
+            </li>
 
             <li class="nav-item inactive">
               <a class="nav-link" href="{% url 'account_logout' %}"><span class="myfont-scaling-med">Sign Out </span></a>
