made security and performance enhancements.

--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Created to make student participation in school decisions a reality. With its easy-to-use interface, students vote to make their voices heard.">
     <meta name="keywords" content="School, Vote, Voting, Students, Survey, ASB" />
     <meta name="author" content="Luca Cotter">
+    <meta name="theme-color" content="#317EFB"/>
     {% load static %}
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
