--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -58,6 +58,10 @@
            <a class="nav-link" href="{% url 'about' %}"><span class="myfont-scaling-med">About</span><span class="sr-only">(current)</span></a>
          </li>
 
+         <li class="nav-item inactive">
+           <a class="nav-link" href="{% url 'contact' %}"><span class="myfont-scaling-med">Contact</span><span class="sr-only">(current)</span></a>
+         </li>
+
          {% if user.is_authenticated %}
             <li class="nav-item dropdown inactive">
               <a class="nav-link dropdown-toggle" href="" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><span class="myfont-scaling-med">Schools</span></a>
