--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -59,7 +59,7 @@
          </li>
 
          <li class="nav-item inactive">
-           <a class="nav-link" href="{% url 'contact' %}"><span class="myfont-scaling-med">Contact</span><span class="sr-only">(current)</span></a>
+           <a class="nav-link" href="{% url 'contact' %}"><span class="myfont-scaling-med">Contact Us</span><span class="sr-only">(current)</span></a>
          </li>
 
          {% if user.is_authenticated %}
