--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -32,6 +32,8 @@
    <link rel="stylesheet" href="{% static 'votes/bars.css' %}"/>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
    <link rel="stylesheet" href="{% static 'votes/styles-final.css' %}"/>
+   {% block head %}
+   {% endblock %}
 </head>
 
 {% block script %}
