--- a/votes/templates/votes/contact.html
+++ b/votes/templates/votes/contact.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block head %}
+<script src='https://www.google.com/recaptcha/api.js'></script>
+{% endblock %}
+
 {% block title %}School Votes{% endblock %}
 {% block sidenav %}
 {% endblock %}
@@ -13,6 +17,7 @@
  <textarea name="message" rows="10" cols="30" placeholder="Enter contact info and request here"></textarea>
 </br>
  <input class="btn btn-primary" type="submit">
+ <div class="g-recaptcha" data-sitekey="6LddLHYUAAAAAI4DFElHm0oZjNCpsYPvYXa2KCKW"></div>
   </form>
    <hr>
 </div>
