adding daily bulletin link

--- a/votes/templates/votes/community.html
+++ b/votes/templates/votes/community.html
@@ -6,6 +6,7 @@
 {% block content %}
 {% load votes_extras %}
 <img src="{{ community.logo.url }}" alt="community logo"  width="150" height="150"><br/>
+<img src="/media/logos/dailybulletin.jpeg" alt="daily bulleting"><br/>
    <strong>Surveys for {{ community.name }}</strong>
        {% for survey in surveys %}
          <hr>
