--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -6,7 +6,7 @@
    <!-- <meta charset="utf-8"> -->
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Created to make student participation in school decisions a reality. With its easy-to-use interface, students vote to make their voices heard.">
-    <meta name="keywords" content="School, Vote, Voting, Students, Survey, ASB" />
+    <meta name="keywords" content="School, Vote, Voting, Students, Survey, ASB, Luca Cotter" />
     <meta name="author" content="Luca Cotter">
     <meta name="theme-color" content="#317EFB"/>
     {% load static %}
