remove the weekly bulletin

--- a/votes/templates/votes/community.html
+++ b/votes/templates/votes/community.html
@@ -10,7 +10,7 @@
   <strong> {{ message }} </strong> </br>
   <hr>
   {% endif %}
-{% if community.name == "Santa Monica High School" %}
+{% if community.name == "Santa Monica High Schoolx" %}
 	<img src="{{ community.logo.url }}" alt="community logo"  width="150" height="150"><br/>
 	<img src="/media/logos/dailybulletin.jpeg" alt="daily bulleting"><br/>
 {% endif %}
