--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -73,10 +73,10 @@
                 {% endfor %}
               </div>
             </li>
-<!--            <li class="nav-item inactive">
+            <li class="nav-item inactive">
               <a class="nav-link" href="{% url 'battleroyale' %}"><span class="myfont-scaling-med">Senior Battle Royale </span></a>
             </li>
--->
+
             <li class="nav-item inactive">
               <a class="nav-link" href="{% url 'suggestion' %}"><span class="myfont-scaling-med">Suggestion </span></a>
             </li>
