--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -10,8 +10,9 @@
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
 
+Enter your phone number:
  <!-- <textarea name="phonenumber" rows="3" cols="30" placeholder="Enter your first and last name, and your phone number here (Format: XXX-XXX-XXXX)"></textarea> -->
-<input type="tel" name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+<input type="tel" name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required>
 
 
 </br>
