--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -13,7 +13,7 @@
 Enter your phone number to enroll in our annual Senior Battle Royale! You will be notified by the remind soon.
 </br>
  <!-- <textarea name="phonenumber" rows="3" cols="30" placeholder="Enter your first and last name, and your phone number here (Format: XXX-XXX-XXXX)"></textarea> -->
-<input type="tel" name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required>
+<input name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required>
 
 
 </br>
