--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -9,8 +9,10 @@
   <hr>
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
-
-Enter your phone number to enroll in our annual Senior Battle Royale! You will be notified by the remind soon.
+The Senior Battle Royale is a game for SAMOHI seniors. The objective is to tag your target by marking them with a marker,
+and you will then acquire their target. In a week, you will be notified of your target.
+</br>
+Enter your phone number to enroll in our first Senior Battle Royale! You will be notified by the Remind soon.
 </br>
  <!-- <textarea name="phonenumber" rows="3" cols="30" placeholder="Enter your first and last name, and your phone number here (Format: XXX-XXX-XXXX)"></textarea> -->
 <input name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required>
