--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -10,7 +10,7 @@
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
 The Senior Battle Royale is a game for SAMOHI seniors. The objective is to tag your target by marking them with a marker,
-and you will then acquire their target. In a week, you will be notified of your target.
+and you will then acquire their target. In a week, you will be notified of your initial target.
 </br>
 </br>
 Enter your phone number to enroll in our first Senior Battle Royale! You will be notified by the Remind soon.
