added rules and switched to checkbox

--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -9,14 +9,86 @@
   <hr>
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
-The Senior Battle Royale is a game for SAMOHI seniors. The objective is to tag your target by marking them with a marker,
-and you will then acquire their target. In a week, you will be notified of your initial target.
+     Senior Battle Royale Rules
+     </br>
+     Hello and welcome to the class of ‘19’s very own Battle Royale!  Here, I’ll show you how to play the game so that you can join us in our culminating free-for-all.
+     Sadly, we couldn’t get admin to approve the traditional battle royale, so we’ll have to resort to a school-friendly one:
+     Everyone will opt-in to play, and after the deadline you will receive a name.  That name is your first target!  You must eliminate your target with a highlighter by tapping them on the skin with it, but be careful!  Someone out there has a highlighter with your name on it…
+     </br>
+     It’s a fun, simple game, and the winner will receive some sort of prize.
+     </br>
+     Text “@samofight” without the quotations to 81010 to join!
+     </br>
+     Watch your backs, and good luck.
+     </br>
+     Rule 1:
+     </br>
+     You may only use a highlighter, of any color variety.
+     </br>
+     Rule 2:
+     </br>
+     After removing someone from the game, you must text the remind101 to alert the moderator.
+     </br>
+     Rule 3:
+     </br>
+     You may only mark players’ skin. Clothes and backpacks are not considered hits.
+     </br>
+     Rule 4:
+     </br>
+     You may only mark your given target. Any incorrect marks result in disqualification of the marker.
+     </br>
+     Rule 5:
+     </br>
+     No physical roughhousing, keep it clean.
+     </br>
+     Rule 6:
+     </br>
+     There are no safe zones. You may not mark players during class. Only before/after school, during passing periods, and during lunch.
+     </br>
+     Rule 7:
+     </br>
+     Do not disrupt teachers/administrators.
+     </br>
+     Rule 8:
+     </br>
+     This is just a game. Keep it at that. No violence, no whining, and no harassment will be tolerated. We don’t want admin to give consequences to students, let’s keep this clean please.
+     </br>
+     Rule 9:
+     </br>
+     The name of the game is stealth. Don’t obnoxiously chase around the school, don’t be disruptive.
+     </br>
+     Rule 10:
+     </br>
+     It is possible you will get the name of a person that you have never met before. You are allowed to ask to switch your initial target with somebody else’s by asking in the remind101 chat. Do not switch without asking the moderator.
+     </br>
+     Rule 11:
+     </br>
+     You may not request to switch if you are familiar with your target. Switching is a last resort for people who have NEVER seen/met their target. Be considerate.
+     Finally, any disputes must be sent in the remind101 chat for the moderator.
+     </br>
+     —
+     </br>
+     Self Defense:
+     </br>
+     In the event of an attacker failing to successfully mark their target, the target may retaliate back.
+     This can be used in cases of suspicion too. If you suspect someone may be trying to mark you, you can mark them first.
+     However, should a player mis-assess the situation and mark someone who was NOT assigned to attack them, the player is disqualified.
+     Basically, people might try and make you think that you’re their target, and essentially bait you into incorrect self-defense.
+     UNIVERSALLY, if you mark a player that is not your target nor your attacker, you are disqualified.
+     </br>
+     This game seems way more complicated than it is. Basically, mark your targets don’t get marked, and be respectful!
+     </br>
+     Good luck.
+
 </br>
 </br>
-Enter your phone number to enroll in our first Senior Battle Royale! You will be notified by the Remind soon.
+<input name="phonenumber" type="checkbox" name="vehicle" value="Has read and agreed to terms and services"> I have read and agree to the Terms<br>
+
+
+<!-- Enter your phone number to enroll in our first Senior Battle Royale! You will be notified by the Remind soon. -->
 </br>
  <!-- <textarea name="phonenumber" rows="3" cols="30" placeholder="Enter your first and last name, and your phone number here (Format: XXX-XXX-XXXX)"></textarea> -->
-<input name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required>
+<!-- <input name="phonenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="XXX-XXX-XXXX" required> -->
 
 
 </br>
