--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -13,13 +13,15 @@
      </br>
      Hello and welcome to the class of ‘19’s very own Battle Royale!  Here, I’ll show you how to play the game so that you can join us in our culminating free-for-all.
      Sadly, we couldn’t get admin to approve the traditional battle royale, so we’ll have to resort to a school-friendly one:
-     Everyone will opt-in to play, and after the deadline you will receive a name.  That name is your first target!  You must eliminate your target with a highlighter by tapping them on the skin with it, but be careful!  Someone out there has a highlighter with your name on it…
+     Everyone will opt-in to play, and after the deadline you will receive a name.  That name is your first target!  You must eliminate your target with a highlighter by tapping them on the skin with it, but be careful!
+     Someone out there has a highlighter with your name on it…
      </br>
      It’s a fun, simple game, and the winner will receive some sort of prize.
      </br>
      Text “@samofight” without the quotations to 81010 to join!
      </br>
      Watch your backs, and good luck.
+     </br>
      </br>
      Rule 1:
      </br>
