--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -11,6 +11,7 @@
      {% csrf_token %}
      Senior Battle Royale Rules
      </br>
+     <p><b>READ RULES BEFORE JOINING</b></p>
      </br>
      Hello and welcome to the class of ‘19’s very own Battle Royale!  Here, I’ll show you how to play the game so that you can join us in our culminating free-for-all.
      Sadly, we couldn’t get admin to approve the traditional battle royale, so we’ll have to resort to a school-friendly one:
@@ -84,6 +85,7 @@
      Good luck.
 
 </br>
+<p><b>THERE IS NO BACKING OUT</b></p>
 </br>
 <input name="phonenumber" type="checkbox" name="vehicle" value="Has read and agreed to terms and services"> I have read and agree to the Terms<br>
 
