--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -9,9 +9,10 @@
   <hr>
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
+  </br>
+  <p><b>READ RULES BEFORE JOINING</b></p>
+  </br>
      Senior Battle Royale Rules
-     </br>
-     <p><b>READ RULES BEFORE JOINING</b></p>
      </br>
      Hello and welcome to the class of ‘19’s very own Battle Royale!  Here, I’ll show you how to play the game so that you can join us in our culminating free-for-all.
      Sadly, we couldn’t get admin to approve the traditional battle royale, so we’ll have to resort to a school-friendly one:
@@ -83,9 +84,9 @@
      This game seems way more complicated than it is. Basically, mark your targets don’t get marked, and be respectful!
      </br>
      Good luck.
-
 </br>
-<p><b>THERE IS NO BACKING OUT</b></p>
+</br>
+<p><b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX</b></p>
 </br>
 <input name="phonenumber" type="checkbox" name="vehicle" value="Has read and agreed to terms and services"> I have read and agree to the Terms<br>
 
