--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -86,7 +86,7 @@
      Good luck.
 </br>
 </br>
-<p><b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX</b></p>
+<p><b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX AND CLICK SUBMIT</b></p>
 </br>
 <input name="phonenumber" type="checkbox" name="vehicle" value="Has read and agreed to terms and services"> I have read and agree to the Terms<br>
 
