--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -10,7 +10,7 @@
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
   </br>
-  <p><b>READ RULES BEFORE JOINING</b></p>
+  <b>READ RULES BEFORE JOINING</b>
   </br>
      Senior Battle Royale Rules
      </br>
