--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -9,8 +9,8 @@
   <hr>
   <form action="{% url 'br_mail' %}" method="post">
      {% csrf_token %}
-  </br>
   <b>READ RULES BEFORE JOINING</b>
+  </br>
   </br>
      Senior Battle Royale Rules
      </br>
@@ -86,7 +86,7 @@
      Good luck.
 </br>
 </br>
-<p><b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX AND CLICK SUBMIT</b></p>
+<b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX AND CLICK SUBMIT</b>
 </br>
 <input name="phonenumber" type="checkbox" name="vehicle" value="Has read and agreed to terms and services"> I have read and agree to the Terms<br>
 
