minor changes - not to worry

--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -85,6 +85,7 @@
      </br>
      Good luck.
 </br>
+<b>MAKE SURE YOU JOIN THE REMIND BY TEXTING "@SAMOFIGHT" TO 81010</b>
 </br>
 <b>THERE IS NO BACKING OUT ONCE YOU CHECK THIS BOX AND CLICK SUBMIT</b>
 </br>
