--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -5,12 +5,11 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
-   Hello there, {{ firstname }}. Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks!
+   Hello there, {{ firstname }}! Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks!
    <br>
-   <p id="demo">TEST</p>
 
    {% if firstname == "LUCA" %}
-   Hi friend!
+   <p>Luca<p/>
    {% endif %}
 
 
