--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -8,7 +8,7 @@
    Hello there, {{ firstname }}! Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks!
    <br>
 
-   {% if firstname == "LUCA" %}
+   {% if firstname == "Luca" %}
    <p>Luca<p/>
    {% endif %}
 
